Fixed filter list z-index & minifying css

--- a/app/components/Filter/Filter.scss
+++ b/app/components/Filter/Filter.scss
@@ -31,7 +31,7 @@
     padding: 0;
     bottom: -5px;
     right: 0;
-    z-index: 1;
+    z-index: 2;
     border-radius: 50%;
     will-change: opacity, box-shadow;
     transition: opacity 0.2s ease, box-shadow 0.3s ease;
@@ -79,6 +79,7 @@
     padding: 26px;
     border-radius: 6px;
     margin: 0;
+    z-index: 1;
     background: #5C4C72;
     list-style: none;
     display: flex;
